sessile organisms: fixed offset-shift when organism card is selected

--- a/client/css/_mobileOrganisms.scss
+++ b/client/css/_mobileOrganisms.scss
@@ -135,36 +135,3 @@
 		vertical-align: top;
 	}
 }
-
-/*@media screen and (min-width: 768px) {
-	.protocol-section.mobileOrganisms {
-		$newHeight: 95px;
-		.bar-subheader {
-			height: $newHeight !important;
-		}
-
-		.has-subheader {
-			top: $bar-height + $newHeight !important;
-		}
-
-		.filter-buttons {
-			padding: 5px 10px 0 10px;
-
-			.filterIcon {
-				$iconSize: 80px;
-				width: $iconSize;
-				height:$iconSize;
-
-				svg {
-					height:$iconSize;
-				}
-			}
-		}
-
-		.button.all-cats {
-			font-size:3em;
-			margin-top: 23px;
-			margin-left: 27px;
-		}
-	}
-}*/
